# lockfile-test

pnpm/: package.json  pnpm-lock.yaml
poetry/: pyproject.toml
yarn/: package.json
